resources/quayio-stage/apostille/apostille.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: apostille
  labels:
    app: apostille
  annotations:
    haproxy.router.openshift.io/timeout: 60m
spec:
  host: apostille.stage.quay.io
  subdomain: ''
  path: "/"
  to:
    kind: Service
    name: apostille
    weight: 100
  port:
    targetPort: default
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
